# GeoGenocides

./: .gitignore  pyproject.toml  streamlit_app.py
data/: genocides.csv
prototype/: main.py
src/: __init__.py  config.py  map_builder.py  models.py  repository.py  services.py  view.py
